# ebuild-cli

./: .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  .npmrc  LICENSE  README.cn.md  README.md  READNE.md  count.config.js  dev.md  eslint.config.mjs  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.dev.js  webpack.prod.js
.github/workflows/: eb-release.yml
.husky/: check-commit-msg.cjs  commit-msg  post-checkout  post-merge  pre-commit
config/: env.js  getHttpsConfig.js  modules.js  webpack.config.js  webpackDevServer.config.js
config/jest/: fileTransform.js
demo/: index.ts
dev/: a.vue  global.d.ts  index.js  index.ts  vitest.test.js
docs/: README.md  index-template.html
lib/: getPackage.js  log.js  util.js
public/: index.html
scripts/: babel.config.js  build-apps.ts  build-libs.ts  build.config.js  build.js  create-package.ts  dev.js  purge-cdn.js  start.js  test.js  utils.ts  version.md  vite.build-app.config.ts  vite.build-lib.config.ts  vite.config.base.ts
src/: App.tsx  App.vue  Home.tsx  README.md  index.css  index.js  index.ts  index.tsx  main.ts  main.tsx  server.js  server.ts
src/worker/wasm/: .gitignore  Cargo.toml  README.md  build.sh  index.html  test_fec.html  wasm2js.js
src/worker/wasm/lib/: ebuild_wasm_bg.min.js
src/worker/wasm/src/: lib.rs
src/worker/wasm/src/shared/: message.rs  mod.rs
src/worker/wasm/src/utils/: bytes.rs  mod.rs
webpack-config/: build.js  dev.js  prod.js
(+68 files in other folders)
