[package]
name = "ebuild-wasm"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Ebuild Rust Wasm"

[lib]
# ! 要想被本地其他包引用 此处必须注释掉
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
once_cell = "1.8"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
# tokio = {version = "1.13", features = ["full"]}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1
# panic = "abort"